<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="common_cancel">Cancel</string>
    <string name="common_confirm">Confirm</string>
    <string name="common_next">Next</string>
    <string name="common_back">Back</string>
    <string name="common_wait">Wait</string>
    
    <string name="qr_not_recognized">Gauge-Id was not recognized. Please check the provided QR-code and try again.</string>
    <string name="main_display_size_warning">The display-size of your device is too small. Please use at least a 540x960 display.</string>
    
    <string name="main_menu">Menu</string>
    <string name="main_connected">this device is connected to the EPVI database</string>
    <string name="main_not_connected">this device is not connected to the EPVI database</string>
    <string name="main_data_synchron">all data synchronized with the EPVI database</string>
    <string name="main_data_desynchron">new recorded data not synchronized yet</string>
    <string name="main_data_asynchron">!failed to synchronize with the EPVI database!</string>
    <string name="main_sync_not_done">synchronization not yet completed</string>
    <string name="main_sync_done">synchronization was successful</string>
    <string name="main_sync_file">Last session was loaded from memory.</string>
    <string name="main_sync_inprog">Synchronization in progress. Please wait.</string>
    <string name="main_sync_not_successful">Youre device could not be synchronized with a local database!</string>
    <string name="main_sync_abort">abort synchronization</string>
    <string name="main_sync_aborted">Synchronization aborted!</string>
    <string name="main_sync_faild_upload">New entries were not saved to the database!</string>
    <string name="main_sync_load_from_file_msg">No connection with the EPVI database could be established. Load last session from memory?</string>
    <string name="main_sync_timeout_msg" formatted="false">Synchronization failed due to synchronization timout of %d seconds.</string>
    
    <string name="main_button_panel_new_session">new session</string>
    <string name="main_button_panel_load_session">load session</string>
    <string name="main_button_panel_meter_list">meter list</string>
    <string name="main_button_panel_configurations">configurations</string>
    <string name="main_button_panel_qr_scanner">collect new reading</string>
    <string name="main_button_panel_close">close</string>
    <string name="main_button_panel_new_device">register new device</string>
        
    <string name="main_options_panel_sync_db">synchronize with EPVI database</string>
    <string name="main_options_panel_connection">connection settings</string>
    <string name="main_options_panel_load_dbg_ses">load debug-session</string>
    <string name="main_options_panel_load_last_ses">load last session</string>
    <string name="main_options_panel_save_session">save current session</string>
    <string name="main_options_panel_clear_session">reset current session</string>
    
    <string name="app_name">EPVI</string>
    <string name="action_settings">Settings</string>
    <string name="generic_exception_warning">an exception occurred: </string>
    <string name="no_base_ws_url_warning">No EPVI-Service endpoint has been specified. Please configure connection-settings first.</string>
    
    <string name="gauge_display_last_read">last:</string>
    <string name="gauge_display_gauge_name">gauge name:</string>
    <string name="gauge_display_gauge_location">location:</string>
    <string name="gauge_display_barcode_scan">qr-/barcode scanner</string>
    <string name="gauge_display_meter_scan">digit scanner</string>
    <string name="gauge_display_show_display">manual input</string>
    <string name="gauge_display_gauge_date">date of reading:</string>
    <string name="gauge_display_gauge_digits">number of digits:</string>
    <string name="gauge_display_gauge_decimals">decimal places:</string>
    <string name="gauge_display_gauge_barcode">qr-/barcode:</string>
    <string name="gauge_display_gauge_comment">comment:</string>
    <string name="gauge_display_read_qr_code">scan a qr- or barcode to identify the gauge</string>
        
    <string name="gauge_display_read_warning_less">The entered value is less than the value of the last reading!</string>
    <string name="gauge_display_data_warning">The current reading has been corrupted, please start this dialog again.</string>
    <string name="gauge_display_no_data_warning">No data for this gauge found. Please register this gauge with the EPVI web application first.</string>
    
    <string name="abort_scan">abort scan</string>
    <string name="take_pcture">take a picture</string>
    <string name="take_pcture_again">change picture</string>
    <string name="list_item_last_read">last reading: </string>
    <string name="list_item_medium">medium: </string>
    
    <string name="action_new_reading" formatted="false">A new reading was added for gauge %s at %s</string>
    <string name="action_new_device" formatted="false">A new gauge device was added for gauge %s</string>
    
    <string name="connection_dia_title">connection settings</string>
    <string name="connection_dia_subtitle">specify the epvi-service endpoint</string>
    <string name="connection_dia_address">address:</string>
    <string name="connection_dia_abort">Cancel</string>
    <string name="connection_dia_confirm">confirm</string>
    <string name="connection_dia_no_endpoint">please enter a valid endpoint address</string>
    <string name="connection_dia_malformed_url">Wrong uri format! Please start with \'http://\' and end with \'/MobileGaugeReading\'</string>
    
    <string name="new_device_title">Device Registration</string>
    <string name="new_device_step0_subtitle">Select a gauge</string>
    <string name="new_device_step2_subtitle">Step 1: Picture</string>
    <string name="new_device_step3_subtitle">Step 2: Manufacturer</string>
    <string name="new_device_step4_subtitle">Step 3: Digits</string>
    <string name="new_device_step5_subtitle">Step 4: Contrast</string>
    <string name="new_device_step6_subtitle">Step 5: Location</string>
    <string name="new_device_step7_subtitle">Step 6: Description</string>
    <string name="new_device_step8_subtitle">Summary</string>
    <string name="new_device_step0_info">please note: In case of a whole new gauge, create a new gauge in the EPVI web application first. Than register the gauge-device with this application. Otherwise a device exchange is carried out.</string>
    <string name="new_device_step0_spinner_prompt">choose a gauge:</string>
    <string name="new_device_step0_barcode_info">alternatively: scan the qr- or barcode:</string>
	<string name="new_device_step0_barcode_take_last_read">please take a last reading before exchanging the gauge devices</string>
    <string name="new_device_step0_barcode_select_gauge">please select a gauge first</string>
    <string name="new_device_step0_gauge_not_found">This gauge has not been registered yet! Please register a gauge via the EPVI web application before registering a gauge device.</string>
    <string name="new_device_step1_info">Take a picture of the device</string>
    <string name="new_device_step2_info">Enter a name for the new device</string>
    <string name="new_device_step3_info">Enter manufacturer and serial no.</string>
    <string name="new_device_step3_manuf">Manufacturer:</string>
    <string name="new_device_step3_serial">Serial No.:</string>
    <string name="new_device_step4_info">Provide number of displayed digits</string>
    <string name="new_device_step4_digit">select the number of all digits displayed (including decimal places)</string>
    <string name="new_device_step4_decimal">select the number of decimal places displayed</string>
    <string name="new_device_step5_info">Select digit-background contrast</string>
    <string name="new_device_step5_dark">bright digits on a dark background</string>
    <string name="new_device_step5_bright">dark digits on a bright background</string>
    <string name="new_device_step6_info">Enter a location-description (optional)</string>
    <string name="new_device_step6_location">Location:</string>
    <string name="new_device_step7_info">Enter a general description (optional)</string>
    <string name="new_device_step7_description">Description:</string>
    <string name="new_device_next_step_warning">Please enter or choose something before continuing.</string>
    <string name="new_device_decimal_warning">You have to enter a greater digit number first.</string>
    <string name="new_device_take_last_read">please take a last reading before exchanging the gauge devices</string>
    <string name="new_device_take_first_read">please take the first reading of the new gauge device</string>
    <string name="new_device_device_not_found">No gauge device is registered for this gauge yet. Do this by using the oiption \'register new device\'.</string>
    <string name="new_device_barcode_in_use">This qr- or barcode is already taken.</string>

    <string name="epvi_options_show_options">groups and filter</string>
    <string name="epvi_options_show_list">update list</string>
    <string name="epvi_options_reset_list">reset list</string>
    <string name="group_prompt">group by:</string>
    <string-array name="group_array">
        <item>medium</item>
        <item>name</item>
        <item>description</item>
        <item>location</item>
        <item>last reading date</item>
        <item>days since reading</item>
    </string-array>
    
    <string name="filter_prompt">filter by:</string>
    <string-array name="filter_array">
        <item></item>
        <item>name</item>
        <item>description</item>
        <item>location</item>
        <item>last reading date</item>
    </string-array>
</resources>
